--- a/style.css
+++ b/style.css
@@ -45,3 +45,115 @@ letter-spacing: 0%;
 text-align: center;
 margin-top: 0;
 }
+
+
+/* categories styles */
+
+
+
+
+
+
+.catagories{
+  display: flex;
+  justify-content: center;
+}
+.catagories-container{
+  width:803px;
+}
+
+.catagories-img{
+  width:100%;
+}
+.catagorie-title{
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 88px;
+  font-weight: 700;
+  line-height: 107px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+.catagorie-description{
+  color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 29px;
+letter-spacing: 0%;
+text-align: center;
+}
+.catagorie-sub-title{
+  color: rgb(7, 2, 17);
+font-family: Inter;
+font-size: 48px;
+font-weight: 700;
+line-height: 58px;
+letter-spacing: 0%;
+text-align: center;
+}
+
+/* vector banner styles */
+
+
+.vector-banner{
+
+  border-radius: 16px;
+
+background: linear-gradient(90.00deg, rgb(7, 2, 17),rgba(7, 2, 17, 0) 100%),url('images/Vectorrr.png');
+
+  background-size: cover;
+  background-repeat: no-repeat;
+background-position: center;
+width: 1320px;
+height: 600px;
+margin:50px auto 0px auto;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+/* .vector-banner-content{
+margin-right: ;
+} */
+
+
+.vector-banner-title{
+  color: rgb(255, 255, 255);
+font-family: Merriweather;
+font-size: 64px;
+font-weight: 900;
+line-height: 88px;
+letter-spacing: 11%;
+text-align: left;
+margin-right: 94px;
+}
+
+.vector-banner-description{
+  color: rgba(255, 255, 255, 0.8);
+font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+letter-spacing: 0%;
+text-align: left;
+margin-right: 34px;
+
+}
+
+.vector-join{
+  color: rgb(255, 255, 255);
+font-family: Inter;
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: uppercase;
+margin-left: 58px;
+
+}
+
+/* .vector-img{
+  width:100%;
+} */
