--- a/style.css
+++ b/style.css
@@ -113,9 +113,9 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
-/* .vector-banner-content{
-margin-right: ;
-} */
+.vector-banner-content{
+margin-right:38px ;
+}
 
 
 .vector-banner-title{
@@ -200,4 +200,64 @@ color: white;
 padding: 16px 32px 16px 32px;
 border: none;
 
+}
+/* offer banner styles */
+
+.offer-banner{
+  width: 1320px;
+  height: 482px;
+  margin:50px auto 0px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.offer-content{
+  width: 393px;
+height: 255px;
+margin-right: 70px;
+}
+.offer-2024{
+  text-align:left;
+  width: 276px;
+height: 170px;
+margin-left: 118px;
+margin-bottom: 47px;
+}
+
+.offer-title{
+  color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 29px;
+letter-spacing: 0%;
+text-align: left;
+margin-bottom: 16px;
+}
+.offer-sub-title{
+  color: rgb(7, 2, 17);
+font-family: Merriweather;
+font-size: 48px;
+font-weight: 900;
+line-height: 60px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+margin-top: 16px;
+}
+.offer-description{
+  color: rgba(7, 2, 17, 0.6);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px;
+letter-spacing: 0%;
+text-align: left;
+}
+.offer-img{
+  /* box-sizing:border-box; */
+border: 15px solid rgb(255, 0, 0);
+border-radius: 360px;
+padding: 40px;
 }
