holiday section added

--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ border: none;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #FF0000;
 }
 
 .offer-content{
@@ -257,7 +258,38 @@ text-align: left;
 }
 .offer-img{
   /* box-sizing:border-box; */
-border: 15px solid rgb(255, 0, 0);
+border: 15px solid rgb(0, 204, 255);
 border-radius: 360px;
 padding: 40px;
+}
+/* holiday styles */
+
+.holiday{
+  width: 1068px;
+height: 260px;
+margin:50px auto;
+text-align: center;
+background-color: aqua;
+}
+
+.holiday-title{
+  font-family: Merriweather;
+font-size: 72px;
+font-weight: 900;
+line-height: 91px;
+letter-spacing: 0%;
+text-align: center;
+margin-top: 16px;
+margin-bottom: 28px;
+}
+
+.holiday-description{
+  color: rgba(7, 2, 17, 0.6);
+font-family: Inter;
+font-size: 20px;
+font-weight: 500;
+line-height: 32px;
+letter-spacing: 0%;
+text-align: center;
+
 }
