--- a/style.css
+++ b/style.css
@@ -189,6 +189,13 @@ text-transform: capitalize;
 
 .txt-red{
   color: #FF0000;
+  color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 48px;
+font-weight: 700;
+line-height: 58px;
+letter-spacing: 0%;
+
 }
 
 .join-btn{
@@ -210,7 +217,7 @@ border: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #FF0000;
+  /* background-color: #FF0000; */
 }
 
 .offer-content{
@@ -258,7 +265,7 @@ text-align: left;
 }
 .offer-img{
   /* box-sizing:border-box; */
-border: 15px solid rgb(0, 204, 255);
+border: 15px solid rgb(255, 0, 8);
 border-radius: 360px;
 padding: 40px;
 }
@@ -269,7 +276,7 @@ padding: 40px;
 height: 260px;
 margin:50px auto;
 text-align: center;
-background-color: aqua;
+
 }
 
 .holiday-title{
@@ -332,7 +339,7 @@ margin-left: 177px;
   width: 1320px;
   height: 1163px;
   margin:50px auto 0px auto;
-  /* background-color: aqua; */
+  
 
 
 }
@@ -444,4 +451,71 @@ border: none;
 /* to position the button merging with input field */
 position: absolute;
 right: 210px;
+}
+
+
+/* footer styles */
+
+
+.footer-container{
+
+  background: rgb(7, 2, 17);
+  width: 100%;
+height: 609px;
+margin-top: 120px;
+
+}
+.footer-details{
+  color: white;
+padding-top: 120px;
+display: flex;
+justify-content: space-evenly;
+gap: 24px;
+}
+
+.footer-details p{
+  color: rgb(255, 255, 255);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 40px;
+letter-spacing: 0%;
+text-align: left;
+}
+.footer-details-icons span{
+  color: rgb(255, 255, 255);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 40px;
+letter-spacing: 0%;
+text-align: left;
+
+}
+.footer-icons{
+  display: flex;
+  justify-content:center ;
+  align-items: center;
+  gap: 24px;
+  margin-top: 50px;
+}
+.footer-details-icons{
+  
+  padding: 24px;
+}
+
+.all-right-reserved{
+  display: flex;
+  justify-content: space-around;
+}
+
+.all-right-reserved p {
+  color: rgb(255, 255, 255);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 29px;
+letter-spacing: 0%;
+text-align: left;
+padding-left: 140px;
 }
