--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ text-align: center;
 height: 662.07px;
 margin:50px auto 0px auto;
 background-color:white;
-background-image: url('images/Rectangle\ 2.png');
+background-image: url("images/Rectangle 2.png");
 background-repeat: no-repeat;
 background-position: bottom  ;
 margin-bottom: 5px;
